--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "1.16.1",
+    "city-state-country": "^1.0.3",
+    "country-list": "^2.2.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
